--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shubham's Porfolio</title>
- </head>
- <body>
-    <h1>Shubham's Portfolio</h1>
-    <h2>I am a Web Developer</h2>
+    <title>My Resume</title>
+</head>
+<body>
+    <h1>Shubham Bhushan</h1>
+    <img src="./resume photo.jpg/"alt="Shubham's photo" height="100"/>
+    
+    <h2>Summary</h2><a>I am an hard working indiviual whose just graduate and looking for some real world experience in web devlopment in form of internship.</a>
     <hr/>
-        <h3><a href="./public/movie-ranking.html">Game Ranking Project</a></h3>
-        <img src="./assets/images/best games.png "height=200 alt="game ranking preview"/>
-      
-        <h3><a href="./public/birthday-invite.html">Birthday Invite Project </a></h3>
-        <img src="./assets/images/birthday-invite.png"height=200 alt="Birthday invite"/>
-    <h4>
-        <a href="./public/about.html">About Me</a>
-        <a href="./public/contact.html">Contact Me</a>
-    </h4>
- </body>
- </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+    <h2>Education</h2><ul><li>Bachelor in Computer application -Maharishi Dayanand University </li></ul>
+    <hr/>
+    <h2>Work Experince</h2><ul><li>Acount management - Small startup as parttime job</li>
+    <li>Customer Service - working parttime in convience store</li></ul>
+    <hr/>
+    <h2> Skills </h2><ul>
+    <li>Customer service - 🌟🌟🌟</li>
+    <li>Microsoft suite - 🌟🌟🌟 </li>
+    <li>Python language - 🌟🌟</li>
+    <li>Acounting skill - 🌟🌟🌟</li>
+    <li>Html - 🌟🌟🌟</li></ul>
+    <hr/>
+    <h2 >Hobby</h2><ul>
+    <li>Swimming and Gym </li>
+    <li>Reading about new tech reviews </li></ul>
+    <hr/>
+    <a href="./contact.html">Contact Details</a>
+    <hr/>
+    <footer>
+        <a href="https://www.google.com/maps/place/Delhi/@28.6440836,77.0932313,10z/data=!3m1!4b1!4m6!3m5!1s0x390cfd5b347eb62d:0x37205b715389640!8m2!3d28.7040592!4d77.1024902!16zL20vMDlmMDc?entry=ttu&g_ep=EgoyMDI1MDYxNi4wIKXMDSoASAFQAw%3D%3D">@2025 Delhi</a>
+    </footer>
+</body>
+</html>
